# bijutsukan

./: README.md  TAGS  bijutsukan.cabal  package.yaml
src/: Cell.hs  Main.hs  Problem.hs  generator.hs
