name:                bijutsukan
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/konn/bijutsukan#readme
license:             BSD3
license-file:        LICENSE
author:              Hiromi ISHII
maintainer:          konn.jinro _at_ gmail.com
copyright:           2018 (c) Hiromi ISHII
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable bijutsukan
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , ersatz
                     , vector
                     , mtl
                     , transformers
                     , random-fu
                     , monad-loops
                     , random-source
  ghc-options:         -Wall
  extensions:          TypeFamilies
                       DeriveGeneric
                       DeriveDataTypeable
                       DeriveAnyClass
